--- a/index.ipynb
+++ b/index.ipynb
@@ -370,16 +370,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f0ca642e4a8>"
+       "<folium.map.Marker at 0x7f93caf02198>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
