Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,9 +527,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-19-732122cc6eec>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-732122cc6eec>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    recoleta_marker = [marker five]\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "recoleta_marker = [marker five]"
    ]
