Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,11 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = [marker_five]\n"
+    "recoleta_marker = [marker_two]\n"
    ]
   },
   {
