Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = [marker_two]\n"
+    "recoleta_marker = [marker_two]\n",
+    "recoleta_mar\n"
    ]
   },
   {
